Add 'snooze' date field to Reminder Notification dialog

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -1291,7 +1291,7 @@ BEGIN
                     BS_AUTORADIOBUTTON,10,91,160,10
     LTEXT           "&Date",IDC_STATIC,17,51,85,8
     CONTROL         "DateTimePicker1",IDC_ABSOLUTEDATE,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | WS_TABSTOP,107,47,97,15
+                    DTS_RIGHTALIGN | WS_TABSTOP,107,48,97,15
     LTEXT           "&Time",IDC_STATIC,17,67,87,8
     COMBOBOX        IDC_ABSOLUTETIME,107,66,97,30,CBS_DROPDOWN | WS_VSCROLL | 
                     WS_TABSTOP
@@ -1554,7 +1554,7 @@ END
 IDD_TDLIMPORTEXPORT_DIALOG DIALOGEX 0, 0, 400, 289
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Import Tasks From Tasklist"
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,289,268,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,344,268,50,14
@@ -1900,16 +1900,17 @@ BEGIN
                     BS_AUTORADIOBUTTON | WS_GROUP,7,130,213,10
     CONTROL         "&Remind me again at:",IDC_SNOOZEOPTIONUNTIL,"Button",
                     BS_AUTORADIOBUTTON,7,166,210,10
-    COMBOBOX        IDC_SNOOZEFOR,17,143,121,386,CBS_DROPDOWNLIST | 
+    COMBOBOX        IDC_SNOOZEFOR,17,143,97,386,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    CONTROL         "DateTimePicker1",IDC_SNOOZEUNTIL,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | DTS_UPDOWN | WS_TABSTOP | 0x8,17,178,
-                    121,15
     PUSHBUTTON      "&Snooze",IDC_SNOOZE,280,178,50,14
     PUSHBUTTON      "&Dismiss",IDC_DISMISS,157,210,50,14
     PUSHBUTTON      "Dismiss and &Go to Task",IDC_DISMISSANDGOTOTASK,212,210,
                     118,14
     CONTROL         "",-1,"Static",SS_ETCHEDHORZ,7,201,323,1
+    CONTROL         "DateTimePicker1",IDC_SNOOZEUNTILDATE,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | WS_TABSTOP,17,178,97,14
+    COMBOBOX        IDC_SNOOZEUNTILTIME,121,178,97,30,CBS_DROPDOWN | 
+                    WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_TIMETRACK_DIALOG DIALOG DISCARDABLE  0, 0, 134, 89
