Make 'By' more specific to help translation

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -4135,8 +4135,8 @@ BEGIN
     IDS_TDC_COLUMN_STARTDATE "Start"
     IDS_TDC_COLUMN_DUEDATE  "Due"
     IDS_TDC_COLUMN_DONEDATE "Completed"
-    IDS_TDC_COLUMN_ALLOCTO  "To"
-    IDS_TDC_COLUMN_ALLOCBY  "By"
+    IDS_TDC_COLUMN_ALLOCTO  "Alloc To"
+    IDS_TDC_COLUMN_ALLOCBY  "Alloc By"
 END
 
 STRINGTABLE DISCARDABLE 
@@ -4144,7 +4144,7 @@ BEGIN
     IDS_TDC_COLUMN_STATUS   "Status"
     IDS_TDC_COLUMN_CATEGORY "Cat."
     IDS_TDC_COLUMN_TASK     "Title"
-    IDS_TDC_COLUMN_CREATEDBY "By"
+    IDS_TDC_COLUMN_CREATEDBY "Created By"
     IDS_TDC_COLUMN_CREATEDATE "Created"
     IDS_TDC_COLUMN_MODIFYDATE "Last Mod."
     IDS_TDC_COLUMN_EXTID    "Ext.ID"
