--- a/GanttChartExt/GanttChartExt.vcxproj
+++ b/GanttChartExt/GanttChartExt.vcxproj
@@ -183,6 +183,7 @@ copy unicode_debug\GanttChartExt.dll ..\todolist\unicode_debug /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="GanttTreeCtrl.cpp" />
     <ClCompile Include="GanttTreeListCtrl.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -215,6 +216,7 @@ copy unicode_debug\GanttChartExt.dll ..\todolist\unicode_debug /y
     <ClInclude Include="GanttEnum.h" />
     <ClInclude Include="GanttPreferencesDlg.h" />
     <ClInclude Include="GanttStruct.h" />
+    <ClInclude Include="GanttTreeCtrl.h" />
     <ClInclude Include="GanttTreeListCtrl.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="StdAfx.h" />
@@ -232,4 +234,9 @@ copy unicode_debug\GanttChartExt.dll ..\todolist\unicode_debug /y
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="GanttChartExt.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
