Finalise Gantt and Calendar tooltips

--- a/GanttChartExt/GanttChartExt.vcxproj
+++ b/GanttChartExt/GanttChartExt.vcxproj
@@ -214,6 +214,7 @@ copy unicode_debug\GanttChartExt.dll ..\todolist\unicode_debug /y
     <ClInclude Include="GanttChartWnd.h" />
     <ClInclude Include="GanttCreateDependsDlg.h" />
     <ClInclude Include="GanttEnum.h" />
+    <ClInclude Include="GanttMsg.h" />
     <ClInclude Include="GanttPreferencesDlg.h" />
     <ClInclude Include="GanttStruct.h" />
     <ClInclude Include="GanttTreeCtrl.h" />
