--- a/GanttChartExt/GanttChartExt.vcxproj.filters
+++ b/GanttChartExt/GanttChartExt.vcxproj.filters
@@ -96,5 +96,8 @@
     <ClInclude Include="GanttTreeCtrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GanttMsg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
