--- a/Shared/Shared.vcxproj
+++ b/Shared/Shared.vcxproj
@@ -609,6 +609,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="ToolTipCtrlEx.cpp" />
     <ClCompile Include="TRAYICON.CPP">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -830,6 +831,7 @@
     <ClInclude Include="TimeEdit.h" />
     <ClInclude Include="TimeHelper.h" />
     <ClInclude Include="ToolbarHelper.h" />
+    <ClInclude Include="ToolTipCtrlEx.h" />
     <ClInclude Include="TRAYICON.H" />
     <ClInclude Include="TreeCtrlHelper.h" />
     <ClInclude Include="TreeDragDropHelper.h" />
@@ -865,4 +867,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="\Users\Daniel.Godson\Documents\GitHub\ToDoList_Core\BurndownExt\BurndownExt.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
