--- a/Shared/Shared.vcxproj.filters
+++ b/Shared/Shared.vcxproj.filters
@@ -454,6 +454,9 @@
     <ClCompile Include="Misc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ToolTipCtrlEx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -943,6 +946,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MonthCalCtrlEx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ToolTipCtrlEx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
