Reposition list ctrl and add border

--- a/TDLTransEdit/TDLTransEdit.rc
+++ b/TDLTransEdit/TDLTransEdit.rc
@@ -44,9 +44,7 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "ToDoList Translation Editor"
 FONT 8, "Tahoma"
 BEGIN
-    CONTROL         "List1",IDC_DICTIONARY,"SysListView32",LVS_REPORT | 
-                    LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_EDITLABELS | 
-                    LVS_OWNERDRAWFIXED | WS_TABSTOP,0,0,445,276
+    CONTROL         "List1",IDC_DICTIONARY,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_EDITLABELS | LVS_OWNERDRAWFIXED | WS_BORDER | WS_TABSTOP,0,0,445,276
 END
 
 
