--- a/TDLTransEdit/TDLTransEdit.rc
+++ b/TDLTransEdit/TDLTransEdit.rc
@@ -39,7 +39,7 @@ BEGIN
 END
 
 IDD_TDLTRANSEDIT_DIALOG DIALOGEX 0, 0, 445, 277
-STYLE WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "ToDoList Translation Editor"
 FONT 8, "Tahoma"
