Copy TDLTransEdit to ToDoList build folders

--- a/TDLTransEdit/TDLTransEdit.vcxproj
+++ b/TDLTransEdit/TDLTransEdit.vcxproj
@@ -89,6 +89,11 @@
       <OutputFile>.\Unicode_Debug\TDLTransEdit.exe</OutputFile>
       <EntryPointSymbol>wWinMainCRTStartup</EntryPointSymbol>
     </Link>
+    <PostBuildEvent>
+      <Command>mkdir ..\ToDoList
+mkdir ..\ToDoList\unicode_debug
+copy unicode_debug\TDLTransEdit.exe ..\todolist\unicode_debug /y</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">
     <ClCompile>
@@ -128,6 +133,11 @@
       <OutputFile>.\Unicode_Release\TDLTransEdit.exe</OutputFile>
       <EntryPointSymbol>wWinMainCRTStartup</EntryPointSymbol>
     </Link>
+    <PostBuildEvent>
+      <Command>mkdir ..\ToDoList
+mkdir ..\ToDoList\unicode_release
+copy unicode_release\TDLTransEdit.exe ..\todolist\unicode_release /y</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="StdAfx.cpp">
