Refactoring to use PreferencesDlg/PageBase

--- a/CalendarExt/CalendarExt.rc
+++ b/CalendarExt/CalendarExt.rc
@@ -143,13 +143,13 @@ BEGIN
                     WS_VISIBLE,172,12,62,17
 END
 
-IDD_PREFERENCES_DIALOG DIALOG DISCARDABLE  0, 0, 373, 222
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+IDD_PREFERENCES_DIALOG DIALOG DISCARDABLE  0, 0, 373, 223
+STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Calendar Preferences"
 FONT 8, "Tahoma"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,262,201,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,316,201,50,14
+    DEFPUSHBUTTON   "OK",IDOK,262,202,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,316,202,50,14
     CONTROL         "",IDC_PPHOST,"Static",SS_GRAYFRAME,7,7,359,185
 END
 
@@ -214,7 +214,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 366
         TOPMARGIN, 7
-        BOTTOMMARGIN, 215
+        BOTTOMMARGIN, 216
     END
 
     IDD_PREFERENCES_PAGE, DIALOG
