--- a/Shared/Shared.vcxproj.filters
+++ b/Shared/Shared.vcxproj.filters
@@ -460,6 +460,9 @@
     <ClCompile Include="WindowIcons.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SessionStatusWnd.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -955,6 +958,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WindowIcons.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SessionStatusWnd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
