--- a/Shared/Shared.vcxproj.filters
+++ b/Shared/Shared.vcxproj.filters
@@ -463,6 +463,9 @@
     <ClCompile Include="SessionStatusWnd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="XslFile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -961,6 +964,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SessionStatusWnd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="XslFile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
