--- a/ToDoList/ToDoList.vcxproj.filters
+++ b/ToDoList/ToDoList.vcxproj.filters
@@ -367,6 +367,9 @@
     <ClCompile Include="TDLThemeComboBox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TDLThreadedExporterWnd.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Interfaces\IContentControl.h">
@@ -793,6 +796,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TDLThemeComboBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TDLThreadedExporterWnd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
