Minor tweaks to WordCloud initial setup

--- a/UIExension/WordCloudUIExtension/WordCloudUIExtensionBridge/WordCloudUIExtensionBridge.vcxproj
+++ b/UIExension/WordCloudUIExtension/WordCloudUIExtensionBridge/WordCloudUIExtensionBridge.vcxproj
@@ -112,7 +112,7 @@ copy $(TargetPath) "$(SolutionDir)..\ToDoList\unicode_$(ConfigurationName)\"</Co
     <ResourceCompile Include="WordCloudUIExtensionBridge.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="dayview.ico" />
+    <None Include="WordCloud.ico" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WordCloudUIExtensionCore\WordCloudUIExtensionCore.csproj">
