--- a/UIExension/WordCloudUIExtension/WordCloudUIExtensionBridge/WordCloudUIExtensionBridge.vcxproj.filters
+++ b/UIExension/WordCloudUIExtension/WordCloudUIExtensionBridge/WordCloudUIExtensionBridge.vcxproj.filters
@@ -42,7 +42,7 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="dayview.ico">
+    <None Include="WordCloud.ico" >
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
